--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   application:
     name: taco-cloud
-  cassandra:
-      keyspace-name: tacocloud
-      schema-action: recreate
-      local-datacenter: datacenter1
-      contact-points: 127.0.0.1:9042
+  datasource:
+    generate-unique-name: false
+    name: tacocloud
+  
+          
